(library
  (name typography)
  (public_name patoline.typography)
  (modules :standard \ ConfigFindFontFontconfig ConfigFindFontLegacy)
  (libraries
    patoraw patutil patConfig patfonts
    (select ConfigFindFont.ml from
      (fontconfig -> ConfigFindFontFontconfig.ml)
      (           -> ConfigFindFontLegacy.ml))))
